--- a/src/app/components/tri-state-checkbox/tri-state-checkbox.component.html
+++ b/src/app/components/tri-state-checkbox/tri-state-checkbox.component.html
@@ -1,3 +1,3 @@
-<div class="btn btn-sm btn-success" (click)="setState(false)" *ngIf="state.value === true">ok</div>
-<div class="btn btn-sm btn-danger" (click)="setState(null)" *ngIf="state.value === false">nieok</div>
-<div class="btn btn-sm btn-info" (click)="setState(true)" *ngIf="state.value === null">niewię</div>
+<div class="btn btn-sm btn-success" (click)="setState(answerState.Incorrect)" *ngIf="state.value === answerState.Correct">ok</div>
+<div class="btn btn-sm btn-danger" (click)="setState(answerState.Unasked)" *ngIf="state.value === answerState.Incorrect">nieok</div>
+<div class="btn btn-sm btn-info" (click)="setState(answerState.Correct)" *ngIf="state.value === answerState.Unasked">niewię</div>
