--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -4,10 +4,11 @@
       <div>{{question.questionText}}
         <div *ngFor="let answer of question.answerList">
           {{answer.answerText}}
-          <app-tri-state-checkbox [state]="answer.control"></app-tri-state-checkbox>
+          <app-tri-state-checkbox [state]="answer.control" *ngIf="answer.type === 'checkbox'"></app-tri-state-checkbox>
+          <app-input-box *ngIf="answer.type === 'input'" [state]="answer.control" ></app-input-box>
         </div>
-      </div>
 
+      </div>
     </div>
   </div>
   <hr>
@@ -16,8 +17,22 @@
 <div class="btn btn-primary" (click)="serialize()">Zapisz</div>
 
 
-<div [innerHTML]="output"></div>
-<hr>
-<div [innerHTML]="trueAnswers"></div>
-<hr>
-<div [innerHTML]="falseAnswers"></div>
+<ul class="nav nav-tabs">
+  <li class="nav-item ">
+    <span class="nav-link " (click)="setTabTo('all')" [ngClass]="{active: activeTab === 'all'}">All</span>
+  </li>
+  <li class="nav-item">
+    <span class="nav-link " (click)="setTabTo('correct')" [ngClass]="{active: activeTab === 'correct'}">Correct</span>
+  </li>
+  <li class="nav-item">
+    <span class="nav-link" (click)="setTabTo('incorrect')" [ngClass]="{active: activeTab === 'incorrect'}">LIncorrect</span>
+  </li>
+</ul>
+
+<div [innerHTML]="output" *ngIf="activeTab === 'all'"></div>
+
+<div [innerHTML]="trueAnswers" *ngIf="activeTab === 'correct'"></div>
+
+<div [innerHTML]="falseAnswers" *ngIf="activeTab === 'incorrect'">
+
+</div>
