--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -25,7 +25,7 @@
     <span class="nav-link " (click)="setTabTo('correct')" [ngClass]="{active: activeTab === 'correct'}">Correct</span>
   </li>
   <li class="nav-item">
-    <span class="nav-link" (click)="setTabTo('incorrect')" [ngClass]="{active: activeTab === 'incorrect'}">LIncorrect</span>
+    <span class="nav-link" (click)="setTabTo('incorrect')" [ngClass]="{active: activeTab === 'incorrect'}">Incorrect</span>
   </li>
 </ul>
 
