--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let category of tempData">
-  <div>{{category.name}}
+  <div><h3>{{category.name}}</h3>
     <div *ngFor="let question of category.questionList">
       <div>{{question.questionText}}
         <div *ngFor="let answer of question.answerList">
@@ -28,11 +28,8 @@
     <span class="nav-link" (click)="setTabTo('incorrect')" [ngClass]="{active: activeTab === 'incorrect'}">Incorrect</span>
   </li>
 </ul>
+<app-basic-interview-result *ngIf="activeTab === 'all'" [options]="{ title: 'Wszystkie', titleColor: '#f4c242', showAnswerState: true }" [data]="allAnswers"></app-basic-interview-result>
+<app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne', titleColor: '#88f441' }" [data]="trueAnswers"></app-basic-interview-result>
+<app-basic-interview-result *ngIf="activeTab === 'incorrect'" [options]="{ title: 'Niepoprawne', titleColor: '#f44a41' }" [data]="falseAnswers"></app-basic-interview-result>
 
-<div [innerHTML]="output" *ngIf="activeTab === 'all'"></div>
 
-<div [innerHTML]="trueAnswers" *ngIf="activeTab === 'correct'"></div>
-
-<div [innerHTML]="falseAnswers" *ngIf="activeTab === 'incorrect'">
-
-</div>
