--- a/src/app/components/input-box/input-box.component.html
+++ b/src/app/components/input-box/input-box.component.html
@@ -1,4 +1,3 @@
-<button (click)="onShowInputBox()">+</button>
 <textarea
        [formControl]="state"
-       *ngIf="showInputBox === true"></textarea>
+       class="form-control float-right" placeholder="dodatkowe pytania" rows="1"></textarea>
