--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -1,20 +1,30 @@
-<div *ngFor="let category of tempData">
-  <div><h3>{{category.name}}</h3>
-    <div *ngFor="let question of category.questionList">
-      <div>{{question.questionText}}
-        <div *ngFor="let answer of question.answerList">
-          {{answer.answerText}}
-          <app-tri-state-checkbox [state]="answer.control" *ngIf="answer.type === 'checkbox'"></app-tri-state-checkbox>
-          <app-input-box *ngIf="answer.type === 'input'" [state]="answer.control" ></app-input-box>
-        </div>
+<div *ngFor="let category of readyQuestions">
+  <div><h3>{{category.categoryName}}</h3>
+    <div class="row question-item" *ngFor="let question of category.questionList">
+      <div class="col-3">
+        {{question.questionText}}
+      </div>
+      <div class="col">
+
+        <ng-container *ngFor="let answer of question.answerList">
+          <div class="row">
+            <div class="col-12 bottom-separator" >
+              <div class="row" *ngIf="answer.type === 'checkbox'">
+                  <p class="col">{{answer.answerText}}</p>
+                  <app-tri-state-checkbox class="col-3" [state]="answer.control"></app-tri-state-checkbox>
+                </div>
+              <app-input-box [state]="answer.control" *ngIf="answer.type === 'input'"></app-input-box>
+            </div>
+          </div>
+        </ng-container>
 
       </div>
     </div>
+    <hr>
   </div>
-  <hr>
 </div>
 
-<div class="btn btn-primary" (click)="serialize()">Zapisz</div>
+<div class="btn btn-primary" (click)="save()">Zapisz</div>
 
 
 <ul class="nav nav-tabs">
@@ -25,11 +35,17 @@
     <span class="nav-link " (click)="setTabTo('correct')" [ngClass]="{active: activeTab === 'correct'}">Correct</span>
   </li>
   <li class="nav-item">
-    <span class="nav-link" (click)="setTabTo('incorrect')" [ngClass]="{active: activeTab === 'incorrect'}">Incorrect</span>
+    <span class="nav-link" (click)="setTabTo('incorrect')"
+          [ngClass]="{active: activeTab === 'incorrect'}">Incorrect</span>
   </li>
 </ul>
-<app-basic-interview-result *ngIf="activeTab === 'all'" [options]="{ title: 'Wszystkie', titleColor: '#f4c242', showAnswerState: true }" [data]="allAnswers"></app-basic-interview-result>
-<app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne', titleColor: '#88f441' }" [data]="trueAnswers"></app-basic-interview-result>
-<app-basic-interview-result *ngIf="activeTab === 'incorrect'" [options]="{ title: 'Niepoprawne', titleColor: '#f44a41' }" [data]="falseAnswers"></app-basic-interview-result>
+<app-basic-interview-result *ngIf="activeTab === 'all'"
+                            [options]="{ title: 'Wszystkie', titleColor: '#f4c242', showAnswerState: true }"
+                            [data]="allAnswers"></app-basic-interview-result>
+<app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne', titleColor: '#88f441' }"
+                            [data]="trueAnswers"></app-basic-interview-result>
+<app-basic-interview-result *ngIf="activeTab === 'incorrect'"
+                            [options]="{ title: 'Niepoprawne', titleColor: '#f44a41' }"
+                            [data]="falseAnswers"></app-basic-interview-result>
 
 
