--- a/src/app/components/root/app.component.html
+++ b/src/app/components/root/app.component.html
@@ -1,1 +1,11 @@
-<app-basic-interview></app-basic-interview>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <button class="btn btn-primary" routerLink="/basic-interview">Nowa rozmowa</button>
+    </div>
+    </div>
+    </div>
+  <router-outlet></router-outlet>
+
+
+<!--<app-basic-interview></app-basic-interview >-->
