snapshot: just before messing with 'references' in localStorage

--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -1,3 +1,14 @@
+<form [formGroup]="form">
+  <div class="row" >
+    <div class="col bottom-separator">nazwisko i imię
+      <textarea
+        class="form-control float-right" placeholder="nazwisko_imię" formControlName="name"
+        rows="1"></textarea>
+    </div>
+  </div>
+</form>
+
+
 <div *ngFor="let category of readyQuestions.questionnaireData">
   <div><h3>{{category.categoryName}}</h3>
     <div class="row question-item" *ngFor="let question of category.questionList">
