--- a/src/app/components/root/app.component.html
+++ b/src/app/components/root/app.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <button class="btn btn-primary" routerLink="/basic-interview">Nowa rozmowa</button>
+      <button class="btn btn-primary" routerLink="/basic-interview/new" (click)="onVisibleBtn()" [hidden]="visibleBtn">Nowa rozmowa</button>
+      <button class="btn btn-primary" routerLink="/" (click)="onVisibleBtn()" [hidden]="!visibleBtn">Powrót do listy</button>
     </div>
     </div>
     </div>
