--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,3 +1,11 @@
-<p>
-  list works!
-</p>
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action active">
+    Lista rozmów
+  </a>
+  <div *ngFor="let person of references">
+    <a href="#" class="list-group-item list-group-item-action" [routerLink]="['/basic-interview', person.id]">{{person.name}}</a>
+
+
+  </div>
+
+</div>
