--- a/src/app/components/root/app.component.html
+++ b/src/app/components/root/app.component.html
@@ -1,12 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <button class="btn btn-primary" routerLink="/basic-interview/new" (click)="onVisibleBtn()" [hidden]="visibleBtn">Nowa rozmowa</button>
-      <button class="btn btn-primary" routerLink="/" (click)="onVisibleBtn()" [hidden]="!visibleBtn">Powrót do listy</button>
+      <button class="btn btn-primary" routerLink="/"
+              routerLinkActive="btn-success" [routerLinkActiveOptions]="{ exact: true }">Lista rozmów</button>
+      <button class="btn btn-primary" routerLink="/basic-interview-create"
+              routerLinkActive="btn-success" [routerLinkActiveOptions]="{ exact: true }">Nowa rozmowa</button>
+
     </div>
     </div>
     </div>
   <router-outlet></router-outlet>
 
 
-<!--<app-basic-interview></app-basic-interview >-->
+
