--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -1,16 +1,19 @@
 <!--<form [formGroup]="form">-->
-  <!--<div class="row" >-->
-    <!--<div class="col">nazwisko i imię-->
-      <!--<textarea-->
-        <!--class="form-control float-right" placeholder="nazwisko_imię" formControlName="name"-->
-        <!--rows="1"></textarea>-->
-    <!--</div>-->
-  <!--</div>-->
+<!--<div class="row" >-->
+<!--<div class="col">nazwisko i imię-->
+<!--<textarea-->
+<!--class="form-control float-right" placeholder="nazwisko_imię" formControlName="name"-->
+<!--rows="1"></textarea>-->
+<!--</div>-->
+<!--</div>-->
 <!--</form>-->
-<div>rozmawiasz z: {{name}}</div>
-<div *ngFor="let category of readyQuestions.questionnaireData">
-  <div><h3>{{category.categoryName}}</h3>
-    <div class="row question-item" *ngFor="let question of category.questionList">
+<div><h4>Rozmawiasz z: {{name}}</h4></div>
+<div class="category-item" *ngFor="let category of readyQuestions.questionnaireData" [ngClass]="{'collapsed' : collapsed !== category}">
+  <div class="list-group-item  active border-0 list-dark bg-dark" (click)="onCollapse(category)" >
+    <h5 class="mb-0">{{category.categoryName}}</h5>
+  </div>
+  <div class="list-group-item  question-item" *ngFor="let question of category.questionList" >
+    <div class="row">
       <div class="col-3">
         {{question.questionText}}
       </div>
@@ -25,38 +28,41 @@
         </div>
         <div class="row" *ngFor="let answerInput of question.answerInputList">
           <div class="col bottom-separator">
-            <app-input-box  [state]="answerInput.answerInputText"></app-input-box>
+            <app-input-box [state]="answerInput.answerInputText"></app-input-box>
           </div>
         </div>
       </div>
     </div>
-    <hr>
   </div>
+
+
 </div>
 
 
-<div class="btn btn-primary" (click)="save()">Zapisz</div>
+<div class="btn btn-dark margin10px" (click)="save()">Zapisz</div>
 
-
-<ul class="nav nav-tabs">
-  <li class="nav-item ">
-    <span class="nav-link " (click)="setTabTo('all')" [ngClass]="{active: activeTab === 'all'}">Wszystkie</span>
-  </li>
-  <li class="nav-item">
-    <span class="nav-link " (click)="setTabTo('correct')" [ngClass]="{active: activeTab === 'correct'}">Poprawne</span>
-  </li>
-  <li class="nav-item">
+<div *ngIf="resultTabsVisible">
+  <ul class="nav nav-tabs">
+    <li class="nav-item ">
+      <span class="nav-link " (click)="setTabTo('all')" [ngClass]="{active: activeTab === 'all'}">Wszystkie</span>
+    </li>
+    <li class="nav-item">
+      <span class="nav-link " (click)="setTabTo('correct')"
+            [ngClass]="{active: activeTab === 'correct'}">Poprawne</span>
+    </li>
+    <li class="nav-item">
     <span class="nav-link" (click)="setTabTo('incorrect')"
           [ngClass]="{active: activeTab === 'incorrect'}">Niepoprawne</span>
-  </li>
-</ul>
-<app-basic-interview-result *ngIf="activeTab === 'all'"
-                            [options]="{ title: 'Wszystkie', titleColor: '#f4c242', showAnswerState: true }"
-                            [data]="allAnswers"></app-basic-interview-result>
-<app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne', titleColor: '#88f441' }"
-                            [data]="trueAnswers"></app-basic-interview-result>
-<app-basic-interview-result *ngIf="activeTab === 'incorrect'"
-                            [options]="{ title: 'Niepoprawne', titleColor: '#f44a41' }"
-                            [data]="falseAnswers"></app-basic-interview-result>
+    </li>
+  </ul>
+  <app-basic-interview-result *ngIf="activeTab === 'all'"
+                              [options]="{ title: 'Wszystkie', titleColor: '#f4c242', showAnswerState: true }"
+                              [data]="allAnswers"></app-basic-interview-result>
+  <app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne', titleColor: '#88f441' }"
+                              [data]="trueAnswers"></app-basic-interview-result>
+  <app-basic-interview-result *ngIf="activeTab === 'incorrect'"
+                              [options]="{ title: 'Niepoprawne', titleColor: '#f44a41' }"
+                              [data]="falseAnswers"></app-basic-interview-result>
 
 
+</div>
