--- a/src/app/components/basic-interview/basic-interview.component.scss
+++ b/src/app/components/basic-interview/basic-interview.component.scss
@@ -1,3 +1,11 @@
+.category-item {
+  margin-bottom: 15px;
+
+  &.collapsed .list-group-item + .list-group-item {
+    display: none;
+  }
+}
+
 .answer-item {
   border: 1px solid lightgray;
 }
@@ -7,6 +15,13 @@
 
   &:nth-child(odd) {
     background: #dee9ef;
+  }
+  &:nth-child(even) {
+    background: #f0f5f8;
+  }
+
+  & > .row {
+    margin: 0;
   }
 }
 
@@ -22,4 +37,9 @@
     position: absolute;
     bottom: 0;
   }
+}
+
+.margin10px {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
