--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,11 +1,11 @@
 <div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action active">
-    Lista rozmów
-  </a>
-  <div *ngFor="let person of references">
-    <a href="#" class="list-group-item list-group-item-action" [routerLink]="['/basic-interview', person.id]">{{person.name}}</a>
-
-
+  <p class="list-group-item  active border-0 list-dark bg-dark">
+    Lista rozmów:
+  </p>
+  <div *ngFor="let person of references" class="list-group-item d-flex justify-content-between">
+    <a href="#" class="list-group-item-action" [routerLink]="['/basic-interview', person.id]">
+      {{person.name}}
+    </a>
+    <button class="btn btn-outline-dark btn-sm" (click)="onDelete(person.id)">usuń</button>
   </div>
-
 </div>
