--- a/src/app/components/basic-interview/basic-interview.component.html
+++ b/src/app/components/basic-interview/basic-interview.component.html
@@ -1,16 +1,12 @@
-<!--<form [formGroup]="form">-->
-<!--<div class="row" >-->
-<!--<div class="col">nazwisko i imię-->
-<!--<textarea-->
-<!--class="form-control float-right" placeholder="nazwisko_imię" formControlName="name"-->
-<!--rows="1"></textarea>-->
-<!--</div>-->
-<!--</div>-->
-<!--</form>-->
+
+
+
+
 <div><h4>Rozmawiasz z: {{name}}</h4></div>
-<div class="category-item" *ngFor="let category of readyQuestions.questionnaireData" [ngClass]="{'collapsed' : collapsed !== category}">
-  <div class="list-group-item  active border-0 list-dark bg-dark" (click)="onCollapse(category)" >
+<div class="category-item" *ngFor="let category of readyQuestions.questionnaireData" [ngClass]="{'collapsed' : categoriesObj[category.categoryName] !== true}">
+  <div class="list-group-item  active border-0 list-dark bg-dark d-flex justify-content-between" (click)="onCollapse(category.categoryName)">
     <h5 class="mb-0">{{category.categoryName}}</h5>
+    <strong><span class="text-success">3 </span>/<span class="text-danger"> 5</span> z 16</strong>
   </div>
   <div class="list-group-item  question-item" *ngFor="let question of category.questionList" >
     <div class="row">
