--- a/src/app/components/root/app.component.html
+++ b/src/app/components/root/app.component.html
@@ -11,6 +11,9 @@
             <a class="nav-link" routerLink="/basic-interview-create" routerLinkActive="active"
                [routerLinkActiveOptions]="{ exact: true }">Nowa rozmowa</a>
           </li>
+          <li class="nav-item" >
+            <a class="nav-link active" >rozmawiasz z {{currentName}}<span class="sr-only">(current)</span></a>
+          </li>
         </ul>
       </div>
     </div>
