upgraded answer input, translate pipe, footer,delete validation

--- a/src/app/components/basic-interview-result/basic-interview-result.component.html
+++ b/src/app/components/basic-interview-result/basic-interview-result.component.html
@@ -1,13 +1,25 @@
-<div *ngIf="data && data.length != 0"><h3 [ngStyle]="{color: options.titleColor}">{{options.title}}</h3><hr></div>
+<div *ngIf="data && data.length != 0"><h3 [ngStyle]="{color: options.titleColor}">{{options.title}}</h3>
+  <hr>
+</div>
 <div *ngFor="let category of data">
   <h4 style="color:dimgrey">{{category.categoryName}}</h4>
   <hr>
   <div *ngFor="let question of category.questionList">
     <h6>{{question.questionText}}</h6>
     <ul>
-      <li *ngFor="let answer of question.answerList">{{answer.answerText}} <span [ngStyle]="{color: colors[answer.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">({{answer.control.value}})</span></li>
+      <li *ngFor="let answer of question.answerList">
+        {{answer.answerText}}
+        <span [ngStyle]="{color: colors[answer.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">
+          ({{answer.control.value | translateAnswerState}})
+          </span>
+      </li>
       <ng-container *ngFor="let answerInput of question.answerInputList">
-        <li *ngIf="answerInput.answerInputText.value !== ''" >dodatkowe informacje: {{answerInput.answerInputText.value}}</li>
+        <li *ngIf="answerInput.answerInputText.value !== ''">
+          {{answerInput.answerInputText.value}}
+          <span [ngStyle]="{color: colors[answerInput.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">
+          ({{answerInput.control.value | translateAnswerState}})
+          </span>
+        </li>
       </ng-container>
 
     </ul>
