--- a/src/app/components/root/app.component.css
+++ b/src/app/components/root/app.component.css
@@ -8,4 +8,15 @@
 
 .content-padding {
   padding-top: 60px;
+  padding-bottom: 50px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background-color: #343a40;
+  z-index: 2;
 }
