--- a/src/app/components/root/app.component.html
+++ b/src/app/components/root/app.component.html
@@ -11,8 +11,8 @@
             <a class="nav-link" routerLink="/basic-interview-create" routerLinkActive="active"
                [routerLinkActiveOptions]="{ exact: true }">Nowa rozmowa</a>
           </li>
-          <li class="nav-item" >
-            <a class="nav-link active" >rozmawiasz z {{currentName}}<span class="sr-only">(current)</span></a>
+          <li class="nav-item" *ngIf="(currentStateService.interviewee$ | async).length > 0" >
+            <a class="nav-link active" >rozmawiasz z {{currentStateService.interviewee$ | async}}</a>
           </li>
         </ul>
       </div>
@@ -23,6 +23,12 @@
   <div  class="container content-padding">
     <router-outlet></router-outlet>
   </div>
+
+  <footer class="footer">
+    <div class="container">
+      <span class="text-muted">Place sticky footer content here.</span>
+    </div>
+  </footer>
 
 
 
