dates on list, autofocus on name input, footer moved to basic-interview-component, added load-configuration-component

--- a/src/app/components/basic-interview-create/basic-interview-create.component.html
+++ b/src/app/components/basic-interview-create/basic-interview-create.component.html
@@ -6,7 +6,7 @@
           Wprowadź nazwisko i imię:
         </p>
         <input
-
+          #inputName
           class="form-control float-right" placeholder="Nazwisko Imię" formControlName="name" (keydown.enter)="onEnter()"
           >
       </div>
