--- a/src/app/components/basic-interview/basic-interview.component.scss
+++ b/src/app/components/basic-interview/basic-interview.component.scss
@@ -43,3 +43,14 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.footer {
+  margin-left: -10vw;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background-color: #343a40;
+  z-index: 2;
+}
