--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,18 +1,46 @@
-<div class="list-group">
-  <p class="list-group-item  active border-0 list-dark bg-dark">
-    Lista rozmów:
-  </p>
-  <div *ngFor="let person of references" class="list-group-item d-flex justify-content-between">
-    <a href="#" class="list-group-item-action" [routerLink]="['/basic-interview', person.id]">
-      {{person.name}}
-    </a>
-    <span>data utworzenia: {{person.creation}}</span>
-    <span>data modyfikacji:{{person.modification}}</span>
-    <span class="d-flex justify-content-between">
+<!--<div class="list-group">-->
+  <!--<p class="list-group-item  active border-0 list-dark bg-dark">-->
+    <!--Lista rozmów:-->
+  <!--</p>-->
+  <!--<div *ngFor="let person of references" class="list-group-item d-flex justify-content-between">-->
+    <!--<a href="#" class="list-group-item-action" [routerLink]="['/basic-interview', person.id]">-->
+      <!--{{person.name}}-->
+    <!--</a>-->
+    <!--<span>data utworzenia: {{person.creation}}</span>-->
+    <!--<span>data modyfikacji:{{person.modification}}</span>-->
+    <!--<span class="d-flex justify-content-between">-->
 
-      <button class="btn btn-outline-dark btn-sm" (click)="onConfirm()" [hidden]="!hideConfiramtionBtns">usuń</button>
+      <!--<button class="btn btn-outline-dark btn-sm" (click)="onConfirm()" [hidden]="!hideConfiramtionBtns">usuń</button>-->
+      <!--<button class="btn btn-outline-danger btn-sm" (click)="onDelete(person.id)" [hidden]="hideConfiramtionBtns">potwierdź</button>-->
+      <!--<button class="btn btn-outline-info btn-sm" (click)="onConfirm()" [hidden]="hideConfiramtionBtns">anuluj</button>-->
+    <!--</span>-->
+  <!--</div>-->
+<!--</div>-->
+
+
+<table class="table">
+  <thead class="thead-dark">
+  <tr>
+    <th scope="col">Kto?</th>
+    <th scope="col">utworzono</th>
+    <th scope="col">ostatnio modyfikowano</th>
+    <th scope="col">zarządzaj</th>
+
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let person of references" [routerLink]="['/basic-interview', person.id]">
+    <th scope="row" >{{person.name}}</th>
+    <td [title]="[person.creation | amDateFormat: 'LLL']">{{person.creation | amDateFormat: 'll'}}</td>
+    <td [title]="[person.modification | amDateFormat: 'LLL']">{{person.modification | amDateFormat: 'll'}}</td>
+    <td class="d-flex justify-content-between">
+      <button class="btn btn-outline-dark btn-sm" (click)="onConfirm($event)" [hidden]="!hideConfiramtionBtns">usuń</button>
       <button class="btn btn-outline-danger btn-sm" (click)="onDelete(person.id)" [hidden]="hideConfiramtionBtns">potwierdź</button>
-      <button class="btn btn-outline-info btn-sm" (click)="onConfirm()" [hidden]="hideConfiramtionBtns">anuluj</button>
-    </span>
-  </div>
-</div>
+      <button class="btn btn-outline-info btn-sm" (click)="onConfirm($event)" [hidden]="hideConfiramtionBtns">anuluj</button>
+    </td>
+  </tr>
+  </tbody>
+</table>
+
+
+<!--<td _ngcontent-c1="" title="4 kwietnia 2018 16:32">4 kwietnia 2018</td>-->
