api-service got it's new functionality, hurray. no direct communication with localStorage in components.

--- a/src/app/components/basic-interview-create/basic-interview-create.component.html
+++ b/src/app/components/basic-interview-create/basic-interview-create.component.html
@@ -13,7 +13,7 @@
     </div>
   </form>
  <br>
-      <button class="btn btn-dark" [routerLink]="['/basic-interview', id]"  (click)="addToReference()" [disabled]="disabled" >Przejdź do formularza</button>
+      <button class="btn btn-dark" (click)="onEnter()" [disabled]="disabled" >Przejdź do formularza</button>
 
 
 
