--- a/src/app/components/input-box/input-box.component.html
+++ b/src/app/components/input-box/input-box.component.html
@@ -1,3 +1,4 @@
 <textarea
        [formControl]="state"
        class="form-control float-right" placeholder="dodatkowe pytania" rows="1"></textarea>
+<!--<button ngxClipboard [cbContent]="copyableText">kopiuj</button>-->
