--- a/src/app/components/load-configuration/load-configuration.component.html
+++ b/src/app/components/load-configuration/load-configuration.component.html
@@ -1,3 +1,5 @@
-<p>
-  load-configuration works!
-</p>
+{{data | json}}
+<input type="file"
+       id="file"
+       accept=".json"
+       (change)="handleFileInput($event.target.files)">
