--- a/src/app/components/basic-interview-preview/basic-interview-preview.component.html
+++ b/src/app/components/basic-interview-preview/basic-interview-preview.component.html
@@ -50,7 +50,6 @@
 </div>
 
 
-<div *ngIf="resultTabsVisible">
   <ul class="nav nav-tabs">
     <li class="nav-item ">
       <span class="nav-link " (click)="setTabTo('all')" [ngClass]="{active: activeTab === 'all'}">Wszystkie</span>
@@ -65,21 +64,17 @@
     </li>
   </ul>
   <app-basic-interview-result *ngIf="activeTab === 'all'"
-                              [options]="{ title: 'Wszystkie', titleColor: '#f4c242', showAnswerState: true }"
+                              [options]="{ title: 'Wszystkie', showAnswerState: true }"
                               [data]="allAnswers"></app-basic-interview-result>
-  <app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne', titleColor: '#88f441' }"
+  <app-basic-interview-result *ngIf="activeTab === 'correct'" [options]="{ title: 'Poprawne'}"
                               [data]="trueAnswers"></app-basic-interview-result>
   <app-basic-interview-result *ngIf="activeTab === 'incorrect'"
-                              [options]="{ title: 'Niepoprawne', titleColor: '#f44a41' }"
+                              [options]="{ title: 'Niepoprawne'}"
                               [data]="falseAnswers"></app-basic-interview-result>
 
 
-</div>
-
 <footer class="footer">
   <div class="container d-flex justify-content-start">
-    <button class="btn btn-dark margin10px" (click)="onResultTabsVisible()">Pokaż raport</button>
     <button class="btn btn-dark margin10px" [routerLink]="['/basic-interview', id]">Modyfikuj</button>
-    <span class="text-muted">...zapisywanko</span>
   </div>
 </footer>
