--- a/src/app/components/basic-interview-preview/basic-interview-preview.component.scss
+++ b/src/app/components/basic-interview-preview/basic-interview-preview.component.scss
@@ -46,10 +46,9 @@
 
 .footer {
   margin-left: -20vw;
-  margin-right: -20vw;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 120vw;
   height: 50px;
   line-height: 50px;
   background-color: #343a40;
