--- a/src/app/components/basic-interview/basic-interview.component.scss
+++ b/src/app/components/basic-interview/basic-interview.component.scss
@@ -45,12 +45,13 @@
 }
 
 .footer {
-  margin-left: -10vw;
-  position: fixed;
+    position: fixed;
   bottom: 0;
-  width: 100%;
+
   height: 50px;
   line-height: 50px;
   background-color: #343a40;
   z-index: 2;
+  left: 0;
+  right: 0;
 }
