--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -2,13 +2,13 @@
   <!--<p class="list-group-item  active border-0 list-dark bg-dark">-->
     <!--Lista rozmów:-->
   <!--</p>-->
-  <!--<div *ngFor="let person of references" class="list-group-item d-flex justify-content-between">-->
+  <!--<div *ngFor="let person of references" class="list-group-item data-flex justify-content-between">-->
     <!--<a href="#" class="list-group-item-action" [routerLink]="['/basic-interview', person.id]">-->
       <!--{{person.name}}-->
     <!--</a>-->
     <!--<span>data utworzenia: {{person.creation}}</span>-->
     <!--<span>data modyfikacji:{{person.modification}}</span>-->
-    <!--<span class="d-flex justify-content-between">-->
+    <!--<span class="data-flex justify-content-between">-->
 
       <!--<button class="btn btn-outline-dark btn-sm" (click)="onConfirm()" [hidden]="!hideConfiramtionBtns">usuń</button>-->
       <!--<button class="btn btn-outline-danger btn-sm" (click)="onDelete(person.id)" [hidden]="hideConfiramtionBtns">potwierdź</button>-->
