--- a/src/app/components/load-configuration/load-configuration.component.html
+++ b/src/app/components/load-configuration/load-configuration.component.html
@@ -1,5 +1,47 @@
 {{data | json}}
-<input type="file"
-       id="file"
-       accept=".json"
-       (change)="handleFileInput($event.target.files)">
+
+
+<ul class="list-group">
+  <li class="list-group-item  active border-0 list-dark bg-dark ">Aktualnie załadowana baza pytań:</li>
+  <ng-container *ngIf="questionsDBMetaData">
+    <li class="list-group-item">{{questionsDBMetaData.comment}}</li>
+    <li class="list-group-item">Utworzono {{questionsDBMetaData.date | amDateFormat: 'll'}}</li>
+    <li class="list-group-item">
+      <button class="btn btn-outline-dark"(click)="onRemoveDB()">
+        Usuń bazę pytań 🗑️
+      </button></li>
+
+  </ng-container>
+  <ng-container *ngIf="!questionsDBMetaData">
+    <li class="list-group-item">brak bazy pytań 💩</li>
+  </ng-container>
+</ul>
+
+<!--<table class="table">-->
+  <!--<thead class="thead-dark">-->
+  <!--<tr>-->
+    <!--<th scope="col">#</th>-->
+    <!--<th scope="col">First</th>-->
+    <!--<th scope="col">Last</th>-->
+    <!--<th scope="col">Handle</th>-->
+  <!--</tr>-->
+  <!--</thead>-->
+  <!--<tbody>-->
+  <!--<tr>-->
+    <!--<th scope="row">1</th>-->
+    <!--<td>Mark</td>-->
+    <!--<td>Otto</td>-->
+    <!--<td>@mdo</td>-->
+  <!--</tr>-->
+  <!--</tbody>-->
+<!--</table>-->
+<br>
+
+<ul class="list-group">
+  <li class="list-group-item  active border-0 list-dark bg-dark ">Załaduj nową bazę pytań:</li>
+  <li class="list-group-item"><input type="file"
+                                     id="file"
+                                     accept=".json"
+                                     (change)="handleFileInput($event.target.files)"></li>
+
+</ul>
