--- a/src/app/components/basic-interview-result/basic-interview-result.component.html
+++ b/src/app/components/basic-interview-result/basic-interview-result.component.html
@@ -1,26 +1,32 @@
-
-
-
-<div *ngFor="let category of data" >
-  <h4 style="color:dimgrey"> {{category.categoryName}}</h4>
-  <hr>
-  <div *ngFor="let question of category.questionList">
-    <h6>{{question.questionText}}</h6>
-    <ul>
-      <li *ngFor="let answer of question.answerList">
-        {{answer.answerText}}
-        <span [ngStyle]="{color: colors[answer.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">
+<div id="resultToCopy">
+  <div class="margin10px">
+    <!--<button class="btn btn-dark float-right " (click)="copyText('resultToCopy')"> kopiuj raport</button>-->
+  </div>
+  <br>
+  <div *ngFor="let category of data">
+    <h4 style="color:dimgrey"> {{category.categoryName}}</h4>
+    <hr>
+    <div *ngFor="let question of category.questionList">
+      <h6>{{question.questionText}}</h6>
+      <ul>
+        <li *ngFor="let answer of question.answerList">
+          {{answer.answerText}}
+          <span [ngStyle]="{color: colors[answer.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">
           ({{answer.control.value | translateAnswerState}})
           </span>
-      </li>
-      <ng-container *ngFor="let answerInput of question.answerInputList">
-        <li *ngIf="answerInput.answerInputText.value !== ''">
-          {{answerInput.answerInputText.value}}
-          <span [ngStyle]="{color: colors[answerInput.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">
+        </li>
+        <ng-container *ngFor="let answerInput of question.answerInputList">
+          <li *ngIf="answerInput.answerInputText.value !== ''">
+            {{answerInput.answerInputText.value}}
+            <span [ngStyle]="{color: colors[answerInput.control.value.toLowerCase()]}" *ngIf="options.showAnswerState">
           ({{answerInput.control.value | translateAnswerState}})
           </span>
-        </li>
-      </ng-container>
-    </ul>
+          </li>
+        </ng-container>
+      </ul>
+    </div>
   </div>
 </div>
+
+
+
