--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,11 +16,9 @@ textarea.form-control {
   }
 }
 
-.footer {
+.footer-like-bar {
   position: fixed;
   bottom: 0;
-
-  height: 50px;
   line-height: 50px;
   background-color: #343a40;
   z-index: 2;
@@ -34,3 +32,11 @@ textarea.form-control {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
 }
 
+.margin10px {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.my-transition {
+  transition: opacity 1s;
+}
