--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
+// Your variable overrides
+$warning: #cc5d00;
+
+
+// Bootstrap and its default variables
+@import "./../node_modules/bootstrap/scss/bootstrap";
+
+
 :root {
   font-size: 16px;
 }
